[gd_scene load_steps=11 format=3 uid="uid://2v3mk05sk4kq"]

[ext_resource type="Script" path="res://Scripts/world.gd" id="1_5dfqd"]
[ext_resource type="PackedScene" uid="uid://dvg2o6pb6ba56" path="res://scenes/Map.tscn" id="2_ina60"]
[ext_resource type="Texture2D" uid="uid://c7x23nyfn8apb" path="res://Sprites/DEtective mannen.png" id="4_47qo5"]
[ext_resource type="Texture2D" uid="uid://b3fo8jowqhycc" path="res://Shader/Version.png" id="4_frqgx"]
[ext_resource type="Texture2D" uid="uid://d26l5sq40ko58" path="res://Shader/costume3.png" id="5_hs6l6"]
[ext_resource type="Texture2D" uid="uid://c57sq1mnxgjbf" path="res://Shader/Playbuton.png" id="6_s1nqv"]
[ext_resource type="AudioStream" uid="uid://qss4r8ok5psi" path="res://Models/OhToALostSoul.mp3" id="8_0icnj"]
[ext_resource type="Texture2D" uid="uid://dcopfmpgbh6jr" path="res://Shader/ffffffffffffmage.png" id="9_g66em"]
[ext_resource type="AudioStream" uid="uid://du8hx8ei0vehk" path="res://Models/Empty Room Ambient Noise Sound Effect (1).mp3" id="10_q8nr3"]

[sub_resource type="Environment" id="Environment_xjj1u"]

[node name="World" type="Node3D"]
script = ExtResource("1_5dfqd")

[node name="Map" parent="." instance=ExtResource("2_ina60")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_xjj1u")

[node name="MenuCanvas" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="MenuCanvas"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="MainMenu" type="MarginContainer" parent="MenuCanvas/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="BG Image" type="TextureRect" parent="MenuCanvas/Control/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("9_g66em")
stretch_mode = 2

[node name="Logo" type="TextureRect" parent="MenuCanvas/Control/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_47qo5")
stretch_mode = 3

[node name="PlayButton" type="TextureButton" parent="MenuCanvas/Control/MainMenu"]
texture_filter = 1
texture_repeat = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("6_s1nqv")
texture_hover = ExtResource("6_s1nqv")

[node name="Version" type="TextureRect" parent="MenuCanvas/Control/MainMenu"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
texture = ExtResource("4_frqgx")

[node name="VersionNumber" type="TextureRect" parent="MenuCanvas/Control/MainMenu"]
texture_filter = 1
texture_repeat = 2
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
texture = ExtResource("5_hs6l6")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_0icnj")
autoplay = true
parameters/looping = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_q8nr3")
volume_db = 4.0
autoplay = true
parameters/looping = true

[connection signal="pressed" from="MenuCanvas/Control/MainMenu/PlayButton" to="." method="_on_play_button_pressed"]
